tests/neg/5541.scala
case class Foo(implicit i: Int) // error: Case classes should have a non-implicit parameter list
